<resources>
    <string name="app_name">ADB</string>

    <string name="command_hint">Shell command</string>
    <string name="command_hint_waiting">Waiting for connection…</string>

    <string name="bookmarks">Bookmarks</string>
    <string name="last_command">Last command</string>
    <string name="help">Help</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="clear">Clear screen</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="pair">Pair</string>
    <string name="dismiss">Dismiss</string>

    <string name="delete_confirm">Are you sure you want to delete this?</string>

    <string name="snackbar_intent_failed">Intent failed to start</string>
    <string name="snackbar_file_opened">Executing script from file</string>

    <string name="developer_url">https://www.github.com/tytydraco</string>
    <string name="source_url">https://www.github.com/tytydraco/LADB</string>
    <string name="contact_url">mailto:tnnijmeh@gmail.com</string>
    <string name="tutorial_url">https://www.xda-developers.com/debloat-your-phone-run-adb-shell-commands-no-root-no-pc</string>

    <string name="paired_key">paired</string>
    <string name="port_hint">Port</string>

    <string name="code_hint">Pairing code</string>

    <string name="pair_title">Pairing information</string>
    <string name="pair_message">You must connect this device to LADB using a pairing code from the \"Wireless debugging\" page in the Developer Settings page. If you have not done this before, click \"Help\" for a tutorial.</string>

    <string name="settings">Settings</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="about">About</string>

    <string name="unpair_title">Unpair</string>
    <string name="unpair_summary">Erasing any existing pairing information.</string>
    <string name="unpair_key">unpair</string>

    <string name="restart_title">Restart</string>
    <string name="restart_summary">Restart the ADB server to apply changed settings</string>
    <string name="restart_key">restart</string>

    <string name="auto_shell_title">Pair &amp; shell</string>
    <string name="auto_shell_summary">Automatically enter an ADB shell; disable to enter a regular, non-adb shell without pairing</string>
    <string name="auto_shell_key">auto_shell</string>

    <string name="buffer_size_title">Buffer size</string>
    <string name="buffer_size_summary">The size of the screen output buffer. Increasing this value will show more output on the screen at once at the cost of performance. (Default: 16384)</string>
    <string name="buffer_size_key">buffer_size</string>

    <string name="startup_command_title">Startup command</string>
    <string name="startup_command_summary">The command to run once the shell has begun</string>
    <string name="startup_command_key">startup_command</string>

    <string name="tutorial_title">Tutorial</string>
    <string name="tutorial_summary">View the tutorial from the XDA Developers page</string>
    <string name="tutorial_key">tutorial</string>

    <string name="error_waiting_title">Stuck on \"Waiting\"</string>
    <string name="error_waiting_summary">Either you entered the pairing information incorrectly, or your device is not being detected. First, ensure that Wireless Debugging is actually enabled. If that does not work, Try the \"Factory reset\" setting in LADB to try pairing again.</string>

    <string name="error_no_wireless_debugging_title">No \"Wireless Debugging\" toggle</string>
    <string name="error_no_wireless_debugging_summary">Your device does not natively support Wireless Debugging, which is required by LADB. Alternatively, you can use a PC to enable this feature, even on unsupported devices. It will last until the next reboot. Connect the device to a PC and type: adb tcpip 5555</string>

    <string name="developer_title">Developer</string>
    <string name="developer_summary">Tyler Nijmeh</string>
    <string name="developer_key">developer</string>

    <string name="source_title">Source code</string>
    <string name="source_summary">View the source code on GitHub</string>
    <string name="source_key">source</string>

    <string name="contact_title">Contact</string>
    <string name="contact_summary">Email me for assistance</string>
    <string name="contact_key">contact</string>

    <string name="licenses_title">Licenses</string>
    <string name="licenses_summary">View the open source licenses</string>
    <string name="licenses_key">licenses</string>

    <string name="pref_file" translatable="false">preferences</string>
    <string name="pref_key_verified" translatable="false">verified</string>
</resources>