<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/settings">
        <Preference
            android:icon="@drawable/ic_baseline_settings_backup_restore_24"
            android:key="@string/restart_key"
            android:summary="@string/restart_summary"
            android:title="@string/restart_title" />
        <EditTextPreference
            android:defaultValue="16384"
            android:icon="@drawable/ic_baseline_home_repair_service_24"
            android:key="@string/buffer_size_key"
            android:summary="@string/buffer_size_summary"
            android:title="@string/buffer_size_title" />
        <EditTextPreference
            android:defaultValue="echo 'Success! ※\\(^o^)/※'"
            android:icon="@drawable/ic_baseline_home_repair_service_24"
            android:key="@string/startup_command_key"
            android:summary="@string/startup_command_summary"
            android:title="@string/startup_command_title" />
    </PreferenceCategory>
</PreferenceScreen>